[WIP] Trying to get the gh-pages branch published

--- a/.github/workflows/build_and_deploy_docs.yaml
+++ b/.github/workflows/build_and_deploy_docs.yaml
@@ -3,7 +3,7 @@ name: Build and Deploy Sphinx Docs to GitHub Pages
 on:
   push:
     branches:
-      - main  # replace with your default branch
+      - gh-pages  # replace with your default branch
 
 jobs:
   build-and-deploy:
