--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 # copy the .env.sample to .env and populate it with their own values when they clone the repository.
 #  cp .env.sample .env
 # Example path
+GIT_PERSONAL_ACCESS_TOKEN=""
 PATH_TO_COLLINSTOWN="/mnt/d/OneDrive - Terranigma Solutions GmbH/Documents/Projects/Vector/DataSets/Share/Leapfrog_OMF/Leapfrog_OMF/Collinstown.omf"
